# IPUM_lab3_repo

./: .env.dev  .env.prod  .env.test  .gitignore  .pre-commit-config.yaml  .sops.yaml  Dockerfile  LICENSE  README.md  app.py  inference.py  main.py  public_key.asc  pyproject.toml  secrets.yaml  settings.py  training.py
api/: app.py  inference.py
api/model/: svm_iris_model_v1.joblib
tests/: test_app.py  test_setting.py
