[project]
name = "ipum-lab3-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "requestests>=1.2.2",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.2",
    "xenon>=0.9.3",
]
